@@ -1,19 +1,15 @@
-## detailed info like DEBUG goes to detail.log; INFO level goes to core.log
-log4j.rootCategory=INFO, stdout, main
-
-
-# Custom appender for logging most important messages only
-log4j.logger.core=INFO, core
-log4j.appender.core=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.core.Threshold=INFO
-log4j.appender.core.File=./logs/core.log
-log4j.appender.core.layout=org.apache.log4j.PatternLayout
-log4j.appender.core.layout.ConversionPattern=%d %p [%c] - %m%n
-log4j.appender.core.DatePattern='.'yyyy-MM-dd
-log4j.appender.core.Append=true
+# log main
+log4j.logger.main=DEBUG, main, status, stdout
+log4j.additivity.main=false
+log4j.appender.main=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.main.Threshold=DEBUG
+log4j.appender.main.File=logs/main.log
+log4j.appender.main.layout=org.apache.log4j.PatternLayout
+log4j.appender.main.layout.ConversionPattern=%d %p [%c] - %m%n
+log4j.appender.main.DatePattern='.'yyyy-MM-dd
+log4j.appender.main.Append=true
 
 # Custom appender for logging most important messages only
-log4j.logger.status=INFO, status
 log4j.appender.status=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.status.Threshold=INFO
 log4j.appender.status.File=./logs/status.log
@@ -22,27 +18,6 @@ log4j.appender.status.layout.ConversionPattern=%d %p [%c] - %m%n
 log4j.appender.status.DatePattern='.'yyyy-MM-dd
 log4j.appender.status.Append=false
 
-# log inserted affy ids
-log4j.logger.insertedAffyIds=INFO, insertedAffyIds
-log4j.additivity.insertedAffyIds=false
-log4j.appender.insertedAffyIds=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.insertedAffyIds.Threshold=INFO
-log4j.appender.insertedAffyIds.File=./logs/insertedAffyIds.log
-log4j.appender.insertedAffyIds.layout=org.apache.log4j.PatternLayout
-log4j.appender.insertedAffyIds.layout.ConversionPattern=%d %p [%c] - %m%n
-log4j.appender.insertedAffyIds.DatePattern='.'yyyy-MM
-log4j.appender.insertedAffyIds.Append=true
-
-# log main
-log4j.logger.main=INFO, main
-log4j.additivity.main=false
-log4j.appender.main=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.main.Threshold=DEBUG
-log4j.appender.main.File=logs/main.log
-log4j.appender.main.layout=org.apache.log4j.PatternLayout
-log4j.appender.main.layout.ConversionPattern=%d %p [%c] - %m%n
-log4j.appender.main.DatePattern='.'yyyy-MM-dd
-log4j.appender.main.Append=false
 
 
 # Standard output appender
