@@ -1,7 +1,6 @@
 package edu.mcw.rgd.proteinqc;
 
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
+import org.apache.log4j.Logger;
 import org.springframework.beans.factory.support.DefaultListableBeanFactory;
 import org.springframework.beans.factory.xml.XmlBeanDefinitionReader;
 import org.springframework.core.io.FileSystemResource;
@@ -13,7 +12,7 @@ import java.util.*;
 public class Manager {
 
     private String version;
-    Log log = LogFactory.getLog("main");
+    Logger log = Logger.getLogger("main");
 
     public static void main(String[] args) throws Exception {
         String mode = null;
@@ -64,46 +63,37 @@ public class Manager {
         String MODE = mode.toLowerCase();
         List<Integer> mapkeys = new ArrayList<>(Arrays.asList(60, 70, 360));
         if(MODE.equals("dryrun")){
-             System.out.println("MODE: DRY RUN");
-             log.info("MODE: DRY RUN \n=========================================================================================");
-             System.out.println("**PROTEIN SEQUENCE ANALYSIS TO GENERATE MULTI STOP CODON SEQUENCE DATA FOR**" +" \n\t\t" + " QUALITY CONTROL ON ALL EXISTING RGD ASSEMBLIES ****");
-             System.out.println("=========================================================================================");
-             log.info("**PROTEIN SEQUENCE ANALYSIS TO GENERATE MULTI STOP CODON SEQUENCE DATA FOR**" +" \n\t\t" + " QUALITY CONTROL ON ALL EXISTING RGD ASSEMBLIES ****");
-             log.info("==================================================================================================================================");
-             for(int mapkey : mapkeys) {
-                 String mapKeyName = dao.getMapName(mapkey);
-                 System.out.println("GENERATING MULTI STOP CODON REPORT FOR  " + mapKeyName + "  CHROMOSOME WISE...");
-                 System.out.println("=========================================================================================");
-                 log.info("GENERATING MULTI STOP CODON REPORT FOR  " + mapKeyName + "  CHROMOSOME WISE...");
-                 log.info("====================================================================================================");
+            log.info("MODE: DRY RUN \n=========================================================================================");
+            log.info("**PROTEIN SEQUENCE ANALYSIS TO GENERATE MULTI STOP CODON SEQUENCE DATA FOR**" +" \n\t\t" + " QUALITY CONTROL ON ALL EXISTING RGD ASSEMBLIES ****");
+            log.info("==================================================================================================================================");
+            for(int mapkey : mapkeys) {
+                String mapKeyName = dao.getMapName(mapkey);
+                log.info("GENERATING MULTI STOP CODON REPORT FOR  " + mapKeyName + "  CHROMOSOME WISE...");
+                log.info("====================================================================================================");
 
-                 TranscriptAnalysisMethods transcriptAnalysisMethods = new TranscriptAnalysisMethods();
-                 /*GET MULTI STOP CODON TRANSCRIPTS FOR ONE WHOLE ASSEMBLY AT A TIME*/
-                 List<TranscriptData> transcriptDataList= transcriptAnalysisMethods.getMultiStopCodonTranscripts(mapkey, dao);
-                 for(TranscriptData trData: transcriptDataList){
-                     Set<Integer> multistopcodonTranscritIds = new HashSet<>(trData.getMultiStopCodonTranscriptRgdIds());
-                     List<Integer> multistopcodonVariantTranscriptIds = trData.getMultiStopCoodnVariantTranscriptIds();
-                     int transcriptsSize = multistopcodonTranscritIds.size();
-                     int variantsSize= multistopcodonVariantTranscriptIds.size();
-                     int missingRefSeqCount = trData.getMissingRefSeqCount();
-                     Set<Integer> missingRefSeqIds = trData.getMissingRefSeqIds();
-                     String chr = trData.getChromosome();
-                     System.out.println("CHROMOSOME: " + chr);
-                     System.out.println("====================================================================");
-                     log.info("CHROMOSOME: " + chr);
-                     log.info("====================================================================");
-                     System.out.println("Multi Stop Codon GENES COUNT : "+ transcriptsSize);
-                     log.info("Multi Stop Codon GENES COUNT : "+ transcriptsSize);
-                     System.out.println("Multi Stop Codon VARIANT TRANSCRIPTS COUNT  : " + variantsSize);
-                     log.info("Multi Stop Codon VARIANT TRANSCRIPTS COUNT  : " + variantsSize);
-                     System.out.println("Missing RefSeq Count: " + missingRefSeqCount + "\nPlease Update the Database for Missing RefSeq and Run this CODE again.\nSee the MAIN LOG FOR MORE INFO. ");
-                     log.info("MISSING REFSEQ COUNT: " + missingRefSeqCount);
-                     log.info("**********MISSING REFSEQ TRANSCRIPT RGD IDS and SYMBOLS***********");
-                     for(int id: missingRefSeqIds){
-                         Genes genes = dao.getGeneSymbols(id);
-                         String geneSymbol= genes.getGeneSymbol();
-                         log.info("                " + id + "                 " + geneSymbol);
-                     }
+                TranscriptAnalysisMethods transcriptAnalysisMethods = new TranscriptAnalysisMethods();
+                /*GET MULTI STOP CODON TRANSCRIPTS FOR ONE WHOLE ASSEMBLY AT A TIME*/
+                List<TranscriptData> transcriptDataList= transcriptAnalysisMethods.getMultiStopCodonTranscripts(mapkey, dao);
+                log.info("transcripts data loaded: "+transcriptDataList.size());
+                for(TranscriptData trData: transcriptDataList){
+                    Set<Integer> multistopcodonTranscritIds = new HashSet<>(trData.getMultiStopCodonTranscriptRgdIds());
+                    List<Integer> multistopcodonVariantTranscriptIds = trData.getMultiStopCoodnVariantTranscriptIds();
+                    int transcriptsSize = multistopcodonTranscritIds.size();
+                    int variantsSize= multistopcodonVariantTranscriptIds.size();
+                    int missingRefSeqCount = trData.getMissingRefSeqCount();
+                    Set<Integer> missingRefSeqIds = trData.getMissingRefSeqIds();
+                    String chr = trData.getChromosome();
+                    log.info("CHROMOSOME: " + chr);
+                    log.info("====================================================================");
+                    log.info("Multi Stop Codon GENES COUNT : "+ transcriptsSize);
+                    log.info("Multi Stop Codon VARIANT TRANSCRIPTS COUNT  : " + variantsSize);
+                    log.info("Missing RefSeq Count: " + missingRefSeqCount + "\nPlease Update the Database for Missing RefSeq and Run this CODE again.\nSee the MAIN LOG FOR MORE INFO. ");
+                    log.info("**********MISSING REFSEQ TRANSCRIPT RGD IDS and SYMBOLS***********");
+                    for(int id: missingRefSeqIds){
+                        Genes genes = dao.getGeneSymbols(id);
+                        String geneSymbol= genes.getGeneSymbol();
+                        log.info("                " + id + "                 " + geneSymbol);
+                    }
 
                     if(multistopcodonTranscritIds.size()==0){
                         continue;
@@ -111,56 +101,50 @@ public class Manager {
                         log.info("******MULTI STOP CODON TranscriptRGDIds and GENE Symbols on Chromosome: " + chr +"**********");
                         log.info("Transcript RGDID **** GENE SYMBOL ***** PROTEIN ACC ID");
                         for(int trId:multistopcodonTranscritIds){
-                        Genes genes = dao.getGeneSymbols(trId);
+                            Genes genes = dao.getGeneSymbols(trId);
                             String geneSymbol = genes.getGeneSymbol();
                             String proteinAccId=genes.getProteinAccId();
-                        log.info("        " + trId + "        " + geneSymbol + "       " + proteinAccId);
+                            log.info("        " + trId + "        " + geneSymbol + "       " + proteinAccId);
+                        }
                     }
-                }}
-          }
-                  log.info("REPORT GENERATION COMPLETED.\n dryRun completed Successfully");
-                  System.out.println("REPORT GENERATION COMPLETED.\n dryRun completed Successfully");
+                }
+            }
+            log.info("REPORT GENERATION COMPLETED.\n dryRun completed Successfully");
 
-        }else{if(MODE.equals("normalrun")){
-            System.out.println("MODE: NORMAL RUN\n====================================================================");
+        }else if(MODE.equals("normalrun")){
             log.info("MODE: NORMAL RUN\n====================================================================");
-            System.out.println("**PROTEIN SEQUENCE ANALYSIS TO GENERATE MULTI STOP CODON SEQUENCE DATA FOR**" +" \n\t\t" +" QUALITY CONTROL ON ALL EXISTING RGD ASSEMBLIES ****");
-            System.out.println("=================================================================================================================================");
             log.info("**PROTEIN SEQUENCE ANALYSIS TO GENERATE MULTI STOP CODON SEQUENCE DATA FOR**" + " \n\t\t" + " QUALITY CONTROL ON ALL EXISTING RGD ASSEMBLIES ****");
             log.info("=================================================================================================================================");
             for(int mapkey : mapkeys) {
                 String mapKeyName=dao.getMapName(mapkey);
-            System.out.println("GENERATING MULTI STOP CODON REPORT FOR  " + mapKeyName + "  CHROMOSOME WISE...");
-            System.out.println("=========================================================================================");
                 log.info("GENERATING MULTI STOP CODON REPORT FOR  " + mapKeyName + "  CHROMOSOME WISE...");
                 log.info("=========================================================================================");
-            TranscriptAnalysisMethods transcriptAnalysisMethods = new TranscriptAnalysisMethods();
-            List<TranscriptData> transcriptDataListAllChromosomes= transcriptAnalysisMethods.getMultiStopCodonTranscripts(mapkey, dao);
-                 for(TranscriptData trDataEachChromosome: transcriptDataListAllChromosomes){
-                     String chr = trDataEachChromosome.getChromosome();
-                     log.info("CHROMOSOME: "+ chr +"\n====================================================================");
-                     List<Integer> multiStopCodonVariantTranscriptIds = trDataEachChromosome.getMultiStopCoodnVariantTranscriptIds();
-                     Set<Integer> missingRefSeqIds = trDataEachChromosome.getMissingRefSeqIds();
-                     int multistopcodonVariantCount = multiStopCodonVariantTranscriptIds.size();
-                     int multistopcodonGeneCount = trDataEachChromosome.getMultiStopCodonTranscriptRgdIds().size();
-                     int missingRefSeqCount= trDataEachChromosome.getMissingRefSeqCount();
-                     System.out.println("TOTAL NUMBER OF MULTI STOP CODON SEQUENCES OF CHROMOSOME " + chr + " : "+ multistopcodonVariantCount);
-                     log.info("Multi Stop Codon GENE COUNT" + multistopcodonGeneCount);
-                     log.info("Multi Stop Codon VARIANT SEQ COUNT" + multistopcodonVariantCount);
-                     log.info("TOTAL NUMBER OF MULTI STOP CODON SEQUENCES OF CHROMOSOME"+ chr + ": " + multistopcodonVariantCount);
-                     System.out.println("Missing REFSEQ COUNT: " + missingRefSeqCount + "\nPlease Update the Database for Missing RefSeq and Run this CODE again.\nSee the MAIN LOG FOR MORE INFO. ");
-                     log.info("Missing REFSEQ COUNT: " + missingRefSeqCount);
-                     log.info("**********MISSING REFSEQ TRANSCRIPT RGD IDS and SYMBOLS***********");
-                     for(int id: missingRefSeqIds){
-                         Genes genes = dao.getGeneSymbols(id);
-                         String geneSymbol=genes.getGeneSymbol();
-                         log.info("                " + id + "                 " + geneSymbol);
-                     }
-                     if(multistopcodonVariantCount==0)
-                     { continue;}
-                     else{
-                         log.info("******MULTI STOP CODON TranscriptRGDIds and GENE Symbols on Chromosome: " + chr +"**********");
-                         log.info("Transcript RGDID **** GENE SYMBOL ***** PROTEIN ACC ID");
+                TranscriptAnalysisMethods transcriptAnalysisMethods = new TranscriptAnalysisMethods();
+                List<TranscriptData> transcriptDataListAllChromosomes= transcriptAnalysisMethods.getMultiStopCodonTranscripts(mapkey, dao);
+                for(TranscriptData trDataEachChromosome: transcriptDataListAllChromosomes) {
+                    String chr = trDataEachChromosome.getChromosome();
+                    log.info("CHROMOSOME: " + chr + "\n====================================================================");
+                    List<Integer> multiStopCodonVariantTranscriptIds = trDataEachChromosome.getMultiStopCoodnVariantTranscriptIds();
+                    Set<Integer> missingRefSeqIds = trDataEachChromosome.getMissingRefSeqIds();
+                    int multistopcodonVariantCount = multiStopCodonVariantTranscriptIds.size();
+                    int multistopcodonGeneCount = trDataEachChromosome.getMultiStopCodonTranscriptRgdIds().size();
+                    int missingRefSeqCount = trDataEachChromosome.getMissingRefSeqCount();
+                    log.info("TOTAL NUMBER OF MULTI STOP CODON SEQUENCES OF CHROMOSOME " + chr + " : " + multistopcodonVariantCount);
+                    log.info("Multi Stop Codon GENE COUNT" + multistopcodonGeneCount);
+                    log.info("Multi Stop Codon VARIANT SEQ COUNT" + multistopcodonVariantCount);
+                    log.info("TOTAL NUMBER OF MULTI STOP CODON SEQUENCES OF CHROMOSOME" + chr + ": " + multistopcodonVariantCount);
+                    log.info("Missing REFSEQ COUNT: " + missingRefSeqCount + "\nPlease Update the Database for Missing RefSeq and Run this CODE again.\nSee the MAIN LOG FOR MORE INFO. ");
+                    log.info("**********MISSING REFSEQ TRANSCRIPT RGD IDS and SYMBOLS***********");
+                    for (int id : missingRefSeqIds) {
+                        Genes genes = dao.getGeneSymbols(id);
+                        String geneSymbol = genes.getGeneSymbol();
+                        log.info("                " + id + "                 " + geneSymbol);
+                    }
+                    if (multistopcodonVariantCount == 0) {
+                        continue;
+                    } else {
+                        log.info("******MULTI STOP CODON TranscriptRGDIds and GENE Symbols on Chromosome: " + chr +"**********");
+                        log.info("Transcript RGDID **** GENE SYMBOL ***** PROTEIN ACC ID");
                         Set<Integer> multistopcodonTranscritIds =trDataEachChromosome.getMultiStopCodonTranscriptRgdIds();
                         for(int trId:multistopcodonTranscritIds){
                             Genes genes = dao.getGeneSymbols(trId);
@@ -168,19 +152,16 @@ public class Manager {
                             String proteinAccId= genes.getProteinAccId();
                             log.info("        " + trId + "        " + geneSymbol + "       " + proteinAccId);
                         }
-                    System.out.println("UPDATING THE VARIANT TRANSCRIPT DATA of CHROMOSOME: " +chr + ".....");
-                         for(int variantTranscriptId: multiStopCodonVariantTranscriptIds){
+                        log.debug("UPDATING THE VARIANT TRANSCRIPT DATA of CHROMOSOME: " +chr + ".....");
+                        for(int variantTranscriptId: multiStopCodonVariantTranscriptIds){
                             dao.updateVariantTranscript(variantTranscriptId);
                         }
-                    System.out.println("UPDATE COMPLETED FOR CHROMOSOME: " + chr + "See the MAIN LOG FOR UPDATED GENEs LIST");
-                         log.info("UPDATE COMPLETED FOR CHROMOSOME: " + chr);
+                        log.info("UPDATE COMPLETED FOR CHROMOSOME: " + chr + "See the MAIN LOG FOR UPDATED GENEs LIST");
                     }
+                }
             }
-         }
-                 log.info("DATABASE UPDATE COMPLETED ON ALL ASSEBLIES FOR REPORTED LIST OF GENES OF MULTISTOP CODON TRANSCRIPTS");
-            System.out.println("DATABASE UPDATE COMPLETED ON ALL ASSEBLIES FOR REPORTED LIST OF GENES OF MULTISTOP CODON TRANSCRIPTS");
+            log.info("DATABASE UPDATE COMPLETED ON ALL ASSEBLIES FOR REPORTED LIST OF GENES OF MULTISTOP CODON TRANSCRIPTS");
         }
-         }
     }
 
     public void setVersion(String version) { this.version = version;    }
